Changes made to styles
Changes made to styling to accommodate addition of new work

--- a/help.css
+++ b/help.css
@@ -18,21 +18,24 @@ input {
   display: none;
 }
 
-ul {
-  display: none;
+label {
+  position: absolute;
+  right: 1em;
 }
 
 #check:checked ~ .nav-items {
   display: block;
   list-style: none;
   background-color: aqua;
+  width: 8em;
 }
 
 .nav-items {
+  display: none;
   padding: 1.5em 0.3em 0.3em 0.3em;
   text-align: center;
-  position: fixed;
-  right: 1em;
+  position: relative;
+  /* right: 1em; */
 }
 
 .nav-items li {
@@ -46,8 +49,3 @@ ul {
 }
 
 /*FOOTER STYLES*/
-
-footer {
-  bottom: 1em;
-  position: fixed;
-}
