--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ header{
     display: flex;
     flex-direction: row;
 }
+
+.titlelogo{
+    
+}
 .nav-links{
     text-align: center;
     display: block;
@@ -10,8 +14,17 @@ header{
     border-radius: 20px;
 }
 
-.tips{
- background-color: #FFEEE4;
+.navbar {
+    background-color: #41b853;
+    text-align: right;
+    margin-left: 200px;
+}
+
+
+/* body styling */
+
+body {
+    background-color: #FFEEE4;
 }
 
 button{
@@ -20,23 +33,21 @@ button{
     border: 1px solid #000;
     padding: 10px 20px;
     background: yellow;
-    font-size: 1.5em;
+    font-size: .5em;
     cursor: pointer;
 }
 
-.navbar{
-    background-color: #41b853;
-    text-align: right;
-    margin-left: 200px;
-}
-
-body{
-    background-color: #FFEEE4;
-}
 .forums{
     background-color:rgb(99, 163, 237);
     border-radius: 100px;
 }
+
+.tips {
+    background-color: #FFEEE4;
+}
+
+
+/* footer styling */
 .footer h2{
     text-align: center;
 }
