--- a/help.css
+++ b/help.css
@@ -38,10 +38,6 @@ input {
   top: 3.5em;
 }
 
-/* ul {
-  display: none;
-} */
-
 #check:checked ~ .nav-items {
   display: block;
   list-style: none;
@@ -118,4 +114,54 @@ footer h2 {
   border-radius: 50%;
   padding: 0.3em;
   /* color: pink; */
+}
+
+/* body styling */
+
+body {
+  background-color: #ffeee4;
+}
+
+button {
+  background-color: #ff5700;
+  border-radius: 25px;
+  border: 1px solid #000;
+  padding: 10px 20px;
+  background: yellow;
+  font-size: 0.5em;
+  cursor: pointer;
+}
+
+.forums {
+  background-color: rgb(99, 163, 237);
+  border-radius: 100px;
+}
+
+.tips {
+  background-color: #ffeee4;
+}
+
+/* footer styling */
+.footer h2 {
+  text-align: center;
+}
+
+.social {
+  display: flex;
+  flex-direction: row;
+}
+.contact-icon {
+  display: flex;
+  flex-direction: row;
+  border-color: rgb(203, 11, 130) solid;
+  align-items: center;
+  margin-left: 60px;
+  gap: 20px;
+}
+.fa-regular fa-envelope {
+  width: 18px;
+  height: 18px;
+}
+#copyright {
+  text-align: center;
 }
