--- a/help.css
+++ b/help.css
@@ -8,19 +8,24 @@ header {
     margin-top: 30px;
 }
 
-.titlelogo {}
+.titlelogo img{
+ height: 60px;
+ width: 60px;
+}
 
 .nav-links {
     text-align: center;
     display: block;
-    background-color: rgb(100, 200, 233);
+    background-color: rgb(19, 224, 235);
     border-radius: 20px;
 }
 
-.navbar {
-    background-color: #41b853;
+.fa-solid fa-bars {
+    background-color: rgb(0 0 0 / 0%);
     text-align: right;
     margin-left: 200px;
+    height: 24px;
+    width: 24px;
 }
 
 
@@ -37,15 +42,88 @@ h2{
     background-color: #FFEEE4;
 }
 
+.accordion{
+background-color: #0ccf87;
+    color: rgb(17, 17, 17);
+    padding: 16px;
+    font-size: 16px;
+    border: black solid 1px;
+    height: 180px;
+    width: 180px;
+    border-radius: 100px;
+    text-align: center;
+    margin-left: 80px;
+    margin-bottom: 40px;
+    margin-top: 10px;
+}
+
+
+.help-forum{
+    background-color: #f64675;
+    color: rgb(220, 12, 12);
+    padding: 16px;
+    font-size: 16px;
+    border: black solid px;
+    height: 170px;
+    width: 170px;
+    border-radius: 100px;
+    text-align: center;
+    margin-left: 30px;
+    margin-bottom: 180px;
+    margin-top: 50px;
+}
+
 
 /* footer styling */
 .footer h2 {
     text-align: center;
 }
 
-.social {
+/*social media buttons styling */
+
+
+.social .fa {
+    padding: 10px;
+    font-size: 20px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+section.social{
+    gap: 30px;
     display: flex;
-    flex-direction: row;
+    margin-left: 50px;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #0842ef;
+    color: white;
+}
+
+.fa-instagram {
+    background: #eb2d07;
+    color: white;
 }
 
 .contact-icon {
@@ -54,68 +132,10 @@ h2{
     border-color: rgb(203, 11, 130) solid;
     align-items: center;
     margin-left: 60px;
-    gap: 20px;
-}
-
-.fa-regular fa-envelope {
-    width: 18px;
-    height: 18px
+    gap: 10px;
 }
 
 #copyright {
     text-align: center;
 }
 
-/* styling dropdown and hoover button style */
-
-.dropbtn {
-    background-color: #0ccf87;
-    color: rgb(17, 17, 17);
-    padding: 16px;
-    font-size: 16px;
-    border: black solid 3px;
-    height: 130px;
-    width: 130px;
-    border-radius: 50px;
-    text-align: center;
-    margin-left: 80px;
-    margin-bottom: 60px;
-    
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #ed8a47;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: #ed31f3;
-}
