All pages updated. About page created and information added regarding creation of work, header and footer styles match main and help pages. Different fonts included in body; although they are commented out pending team approval.

--- a/help.css
+++ b/help.css
@@ -3,6 +3,13 @@ body {
   margin: 1em;
   color: #161b40;
   background-color: #fbfaf9;
+  /* font-family: 'Caveat', cursive;
+font-family: 'Kalam', cursive;
+font-family: 'Kaushan Script', cursive;
+font-family: 'Lobster Two', cursive;
+font-family: 'Oleo Script', cursive;
+font-family: 'Permanent Marker', cursive;
+font-family: 'Quicksand', sans-serif; */
 }
 .navbar {
   margin: 1em 0.5em 1.5em 0.5em;
