--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body {
   margin: 1em;
   color: #161b40;
   background-color: #fbfaf9;
+  /* font-family: 'Caveat', cursive;
+font-family: 'Kalam', cursive;
+font-family: 'Kaushan Script', cursive;
+font-family: 'Lobster Two', cursive;
+font-family: 'Oleo Script', cursive;
+font-family: 'Permanent Marker', cursive;
+font-family: 'Quicksand', sans-serif; */
 }
 .navbar {
   margin: 1em 0.5em 1.5em 0.5em;
@@ -21,6 +28,13 @@ span img {
 }
 .title {
   margin-left: 0.5em;
+  /* font-family: "Caveat", cursive; */
+  /* font-family: "Kalam", cursive; */
+  /* font-family: "Kaushan Script", cursive; */
+  /* font-family: "Lobster Two", cursive; */
+  /* font-family: "Oleo Script", cursive; */
+  /* font-family: "Permanent Marker", cursive; */
+  /* font-family: "Quicksand", sans-serif; */
 }
 .icon {
   display: flex;
