--- a/about.css
+++ b/about.css
@@ -84,6 +84,13 @@ main {
 
 .about-title {
   text-align: center;
+  /* font-family: "Caveat", cursive; */
+  /* font-family: "Kalam", cursive; */
+  /* font-family: "Kaushan Script", cursive; */
+  /* font-family: "Lobster Two", cursive; */
+  /* font-family: "Oleo Script", cursive; */
+  /* font-family: "Permanent Marker", cursive; */
+  /* font-family: "Quicksand", sans-serif; */
 }
 
 /*FOOTER STYLES*/
