--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,13 @@ font-family: 'Oleo Script', cursive;
 font-family: 'Permanent Marker', cursive;
 font-family: 'Quicksand', sans-serif; */
 }
+
 .navbar {
   margin: 1em 0.5em 1.5em 0.5em;
   display: flex;
   justify-content: space-between;
 }
+
 .titlelogo {
   display: flex;
   justify-content: flex-start;
@@ -48,9 +50,7 @@ input {
   right: 2em;
   top: 3.5em;
 }
-/* ul {
-  display: none;
-} */
+
 #check:checked ~ .nav-items {
   display: block;
   list-style: none;
@@ -78,6 +78,84 @@ input {
 .nav-items li a:hover {
   font-size: 2em;
   font-weight: bold;
+}
+
+/* @media screen and (min-width: 900px) {
+  #check,
+  #checkID {
+    display: none;
+  }
+
+  .nav-items {
+    display: flex;
+  }
+
+  .nav-items li a {
+    text-decoration: none;
+  }
+} */
+
+@media screen and (min-width: 900px) {
+  header {
+    display: flex;
+  }
+
+  .title {
+    font-size: 2em;
+    margin: 0.5em 0.5em 0.5em 0.7em;
+  }
+
+  .titlelogo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 25em;
+    position: inherit;
+  }
+
+  .titlelogo span img {
+    height: 10em;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 54em;
+  }
+
+  .nav-links {
+    display: flex;
+    height: 7em;
+    align-self: center;
+  }
+
+  .nav-items {
+    display: flex;
+    margin: 0.5em;
+    align-items: center;
+    position: inherit;
+    justify-content: flex-end;
+  }
+
+  input,
+  label {
+    display: none;
+  }
+
+  .nav-items li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #161b40;
+    font-size: 1.3em;
+    padding: 0.5em;
+  }
+
+  .nav-items li {
+    list-style: none;
+    margin-right: 0.5em;
+  }
 }
 
 /* MAIN STYLES */
