--- a/help.css
+++ b/help.css
@@ -211,3 +211,36 @@ footer h2 {
   border-radius: 50%;
   padding: 0.3em;
 }
+
+@media screen and (min-width: 900px) {
+  .contact-icon {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+
+  .contact-icon span,
+  .contact-icon p {
+    padding: 0.5em;
+    font-size: 1.2em;
+    margin: 0;
+  }
+
+  .footer-info {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .social {
+    font-size: 1.2em;
+  }
+
+  .social .name-icon {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .name-icon .fa-brands {
+    margin-right: 0.3em;
+  }
+}
