--- a/styles.css
+++ b/styles.css
@@ -282,5 +282,38 @@ footer h2 {
   border: 2px solid #41b853;
   border-radius: 50%;
   padding: 0.3em;
-  background-color: #41b853;
+  /* background-color: #41b853; */
+}
+
+@media screen and (min-width: 900px) {
+  .contact-icon {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+
+  .contact-icon span,
+  .contact-icon p {
+    padding: 0.5em;
+    font-size: 1.2em;
+    margin: 0;
+  }
+
+  .footer-info {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .social {
+    font-size: 1.2em;
+  }
+
+  .social .name-icon {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .name-icon .fa-brands {
+    margin-right: 0.3em;
+  }
 }
