--- a/styles.css
+++ b/styles.css
@@ -196,17 +196,23 @@ main h3 {
   border: 2px solid #f40058;
   border-radius: 50%;
   padding: 1.5em;
-  height: 7.5em;
+  height: 10rem;
+  width: 10rem;
   background-color: #f40058;
   color: #161b40;
   font-weight: bold;
-  font-size: 1em;
+  /* font-size: 1em; */
   margin-bottom: 1em;
 }
 
+.emotion-word {
+  font-size: 1.5em;
+}
+
 .emoji {
-  display: block;
-  font-size: 2em;
+  width: 50px;
+  height: 50px;
+  margin-top: 0.5em;
 }
 
 #uninspired {
