--- a/help.css
+++ b/help.css
@@ -5,12 +5,13 @@
 header {
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .titlelogo img{
- height: 60px;
- width: 60px;
+ height: 80px;
+ width: 80px;
+ padding: 10px;
 }
 
 .nav-links {
@@ -20,19 +21,32 @@ header {
     border-radius: 20px;
 }
 
-.fa-solid fa-bars {
-    background-color: rgb(0 0 0 / 0%);
-    text-align: right;
-    margin-left: 200px;
-    height: 24px;
-    width: 24px;
+.material-icons{
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 40px;
+    height: 30px;
+    width: 40px;
+    margin-left: 180px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+}
+
+.panel p{
+    align-items: center;
+    margin-left: 20px;
 }
 
 
 /* body styling */
 
 body {
-    background-color: #FFEEE4;
+    background-color: white;
 }
 h2{
     text-align: center;
@@ -42,8 +56,10 @@ h2{
     background-color: #FFEEE4;
 }
 
+/*Accordion styling*/
+
 .accordion{
-background-color: #0ccf87;
+background-color: #0ced9b;
     color: rgb(17, 17, 17);
     padding: 16px;
     font-size: 16px;
@@ -58,8 +74,8 @@ background-color: #0ccf87;
 }
 
 
-.help-forum{
-    background-color: #f64675;
+.help-forums{
+    background-color: #f32966;
     color: rgb(220, 12, 12);
     padding: 16px;
     font-size: 16px;
@@ -97,12 +113,11 @@ section.social{
     margin-left: 50px;
 }
 
-/* Add a hover effect if you want */
+/* Adding a hover effect */
 .fa:hover {
     opacity: 0.7;
 }
 
-/* Set a specific color for each brand */
 
 /* Facebook */
 .fa-facebook {
