--- a/CSS/help.css
+++ b/CSS/help.css
@@ -156,7 +156,7 @@ main {
   color: rgb(17, 17, 17);
   padding: 16px;
   font-size: 16px;
-  border: black solid 1px;
+  border: rgb(237, 45, 151) solid 4px;
   height: 210px;
   width: 200px;
   border-radius: 100px;
