--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -187,7 +187,7 @@ main h3 {
   text-align: center; */
 }
 
-.emotion-buttons p.show {
+.emotion-buttons .quote.show {
   display: block;
   display: flex;
   align-items: center;
@@ -215,7 +215,7 @@ main h3 {
 .emoji {
   width: 50px;
   height: 50px;
-  margin-top: 0.5em;
+  margin-bottom: 1em;
 }
 
 #quote3 {
@@ -238,7 +238,7 @@ main h3 {
   border: 2px solid #41b853;
 }
 
-#quote {
+#quote1 {
   border: 5px solid #41b853;
 }
 
