--- a/CSS/about.css
+++ b/CSS/about.css
@@ -3,6 +3,7 @@ body {
   margin: 1em;
   color: #161b40;
   background-color: #fbfaf9;
+
   /* font-family: 'Caveat', cursive;
 font-family: 'Kalam', cursive;
 font-family: 'Kaushan Script', cursive;
@@ -16,6 +17,7 @@ font-family: 'Quicksand', sans-serif; */
   margin: 1em 0.5em 1.5em 0.5em;
   display: flex;
   justify-content: space-between;
+  font-family: "Kaushan Script", cursive;
 }
 
 .titlelogo {
@@ -155,7 +157,7 @@ main {
   text-align: center;
   /* font-family: "Caveat", cursive; */
   /* font-family: "Kalam", cursive; */
-  /* font-family: "Kaushan Script", cursive; */
+  font-family: "Kaushan Script", cursive;
   /* font-family: "Lobster Two", cursive; */
   /* font-family: "Oleo Script", cursive; */
   /* font-family: "Permanent Marker", cursive; */
@@ -217,6 +219,7 @@ footer {
   margin: 1em;
   position: relative;
   top: 3em;
+  font-family: "Kaushan Script", cursive;
 }
 
 footer h2 {
