--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,19 +3,20 @@ body {
   margin: 1em;
   color: #161b40;
   background-color: #fbfaf9;
-  /* font-family: 'Caveat', cursive;
-font-family: 'Kalam', cursive;
-font-family: 'Kaushan Script', cursive;
-font-family: 'Lobster Two', cursive;
-font-family: 'Oleo Script', cursive;
-font-family: 'Permanent Marker', cursive;
-font-family: 'Quicksand', sans-serif; */
+  /* font-family: 'Caveat', cursive; */
+  /* font-family: 'Kalam', cursive; */
+  /* font-family: "Kaushan Script", cursive; */
+  /* font-family: 'Lobster Two', cursive; */
+  /* font-family: 'Oleo Script', cursive; */
+  /* font-family: 'Permanent Marker', cursive; */
+  /* font-family: 'Quicksand', sans-serif; */
 }
 
 .navbar {
   margin: 1em 0.5em 1.5em 0.5em;
   display: flex;
   justify-content: space-between;
+  font-family: "Kaushan Script", cursive;
 }
 
 .titlelogo {
@@ -32,7 +33,7 @@ span img {
   margin-left: 0.5em;
   /* font-family: "Caveat", cursive; */
   /* font-family: "Kalam", cursive; */
-  /* font-family: "Kaushan Script", cursive; */
+  font-family: "Kaushan Script", cursive;
   /* font-family: "Lobster Two", cursive; */
   /* font-family: "Oleo Script", cursive; */
   /* font-family: "Permanent Marker", cursive; */
@@ -142,6 +143,7 @@ input {
   .nav-items li {
     list-style: none;
     margin-right: 0.5em;
+    font-size: 1.1em;
   }
 }
 
@@ -153,6 +155,7 @@ main {
 
 main h3 {
   text-align: center;
+  font-family: "Kaushan Script", cursive;
 }
 
 .emotion-buttons {
@@ -160,12 +163,6 @@ main h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  /* display: grid;
-  justify-content: center;
-  grid-template-columns: 10em 10em;
-  grid-template-rows: 10em 10em;
-  grid-gap: 1em; */
 }
 
 .emotion-buttons p {
@@ -177,23 +174,12 @@ main h3 {
   height: 7em;
   text-align: center;
   width: 12em;
-
-  /* border: 5px solid #43bee5;
-  border-radius: 20px;
-  padding: 1.2em;
-  display: none;
-  margin-top: 0;
-  height: 7em;
-  text-align: center; */
 }
 
 .emotion-buttons .quote.show {
   display: block;
   display: flex;
   align-items: center;
-  /* 
-  display: block;
-  align-items: center; */
 }
 
 .round-button {
@@ -210,6 +196,7 @@ main h3 {
 
 .emotion-word {
   font-size: 1.5em;
+  font-family: "Kaushan Script", cursive;
 }
 
 .emoji {
@@ -278,6 +265,7 @@ footer {
   margin: 1em;
   position: relative;
   top: 3em;
+  font-family: "Kaushan Script", cursive;
 }
 
 footer h2 {
@@ -322,7 +310,6 @@ footer h2 {
   border: 2px solid #41b853;
   border-radius: 50%;
   padding: 0.3em;
-  /* background-color: #41b853; */
 }
 .desktop {
   display: none;
@@ -363,25 +350,33 @@ footer h2 {
   .name-icon .fa-brands {
     margin-right: 0.3em;
   }
+
+  /* MAIN MEDIA QUERIES */
   .emotion-buttons {
     flex-direction: row;
+    justify-content: space-evenly;
   }
   .emotion-buttons .quote.show {
     display: none;
   }
 
   .quote22 {
-    font-size: 20px;
-    padding-top: 100px;
+    font-size: 2em;
+    padding-top: 70px;
   }
 
   .box {
     width: 600px;
     height: 300px;
     background-color: #f5f5f5;
-    border: 1px solid #ccc;
+    border: 5px solid #43bee5;
     padding: 20px;
     margin: 20px auto;
     text-align: center;
+    border-radius: 20px;
+  }
+
+  main h3 {
+    font-size: 2em;
   }
 }
